...
    String label;
    IconData icon;

    switch (packet.type) {
      case PacketType.sos:
        color = Colors.red;
        label = 'SOS';
        icon = Icons.sos;
        break;
      case PacketType.ack:
        color = Colors.green;
        label = 'ACK';
        icon = Icons.check;
...
